Date	Added

2007/04/23
	* Debuff on logout&2 is again set to default, instead of removing food
	  bonuses now it removes Maximize Power, Maximum Overthrust and Steel Body.
2007/04/16
	* Changed the default setting for emergency_call to 11 (usable all the
	  time, but only in Gvg Maps) as described by Tharis (skill.conf). [Skotlex]
2007/04/13
	* Added some Kiel quest mapflags [Playtester]
	* Added debug command @displayskill. Should be used only by people
	  searching for new skill IDs. [Skotlex]
2007/04/12
	* Updated various mapflags with 11.2 maps [Playtester]
2007/04/11
	* The pc_max_status_def and mob_max_status_def configs are now set on a
	  1-100 scale instead of 1-10000 (status.conf)
2007/04/03
	* Added hom_setting&0x40, when set it clears the "can't reuse" skill delay
	  when you vaporize a homunculus (set by default). [Skotlex]
2007/04/02
	* Set the default vending tax to 2% as it is in kRO Sakray [Playtester]
2007/03/28
	* Added config "vending_tax" to apply a tax to all vending requests, as it
	  was in kRO Sakray some time ago (items.conf).
2007/03/22
	* Made packet_ver_flag's description use hexadecimal values for the packet
	  versions, and changed the default to 0xFFFF. [Skotlex]
2007/03/19
	* Removed the 'charsave_method' setting from inter_athena.conf
2007/03/17
	* Cleaned up the login & char config [ultramage]
	- removed check_ip_flag
	- changed date_format to input the format string directly
	- changed many settings to allow yes/no instead of just 1/0
	* Removed .gat from configs [Lupus]
2007/03/14
	* Changed the default of debuff_on_logout to 1 since food items shouldn't
	  dispell on logout. [Skotlex]
2007/03/08
	* Adjustments for the new mapcache [DracoRPG]
	- Removed ".gat" from map names in maps_athena.conf
	- Removed read_map_from_cache option as there's no more choice to do
	- Removed afm_dir option as there's no more need for AFM/AF2 support
2007/03/06
	* Added the two new packet versions to battle/client.conf [Zephiris]
2007/03/05